--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>My website</title>
 </head>
 
@@ -120,7 +120,7 @@
                             et!</p>
                     </div>
                     <div class="project__item__image">
-                        <img src="../img/img-1.png" alt="img">
+                        <img src="img/img-1.png" alt="img">
                     </div>
                 </div>
                 <div class="project__item">
@@ -133,7 +133,7 @@
                             et!</p>
                     </div>
                     <div class="project__item__image">
-                        <img src="../img/img-1.png" alt="img">
+                        <img src="img/img-1.png" alt="img">
                     </div>
                 </div>
                 <div class="project__item">
@@ -146,7 +146,7 @@
                             et!</p>
                     </div>
                     <div class="project__item__image">
-                        <img src="../img/img-1.png" alt="img">
+                        <img src="img/img-1.png" alt="img">
                     </div>
                 </div>
                 <div class="project__item">
@@ -159,7 +159,7 @@
                             et!</p>
                     </div>
                     <div class="project__item__image">
-                        <img src="../img/img-1.png" alt="img">
+                        <img src="img/img-1.png" alt="img">
                     </div>
                 </div>
                 <div class="project__item">
@@ -172,7 +172,7 @@
                             et!</p>
                     </div>
                     <div class="project__item__image">
-                        <img src="../img/img-1.png" alt="img">
+                        <img src="img/img-1.png" alt="img">
                     </div>
                 </div>
 
@@ -188,7 +188,7 @@
         <div class="about container">
             <div class="column-left">
                 <div class="about-image">
-                    <img src="../img/img-2.png" alt="img">
+                    <img src="img/img-2.png" alt="img">
                 </div>
             </div>
             <div class="column-right">
