--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                     <ul>
-                        <li><a href="#" data-after="Home">Home</a></li>
+                        <li><a href="#" data-after="He">Home</a></li>
                         <li><a href="#" data-after="Services">Services</a></li>
                         <li><a href="#" data-after="Projects">Projects</a></li>
                         <li><a href="#" data-after="About">About</a></li>
