--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                         </div>
                     </div>
                     <ul>
-                        <li><a href="#" data-after="Home">Home</a></li>
-                        <li><a href="#" data-after="Services">Services</a></li>
-                        <li><a href="#" data-after="Projects">Projects</a></li>
-                        <li><a href="#" data-after="About">About</a></li>
-                        <li><a href="#" data-after="Contact">Contact</a></li>
+                        <li><a href="#hero" data-after="Home">Home</a></li>
+                        <li><a href="#service" data-after="Services">Services</a></li>
+                        <li><a href="#project" data-after="Projects">Projects</a></li>
+                        <li><a href="#about" data-after="About">About</a></li>
+                        <li><a href="#contact" data-after="Contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -46,7 +46,7 @@
                 <h1>Hello, <span></span></h1>
                 <h1>My name is <span></span></h1>
                 <h1>Tony Mascate<span></span></h1>
-                <a href="#" type="button" class="cta">Portfolio</a>
+                <a href="#project" type="button" class="cta">Portfolio</a>
             </div>
         </div>
     </section>
