--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Hero Section -->
 
     <section id="hero">
-        <div class="hero container">
+        <div class="hero container"> <!-- min(height 8vh) -->
             <div>
                 <h1>Hello, <span></span></h1>
                 <h1>My name is <span></span></h1>
